# flask-bokeh-dashboard

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.rst  main.py  pyproject.toml  theme.yaml
.github/workflows/: pre-commit.yml
static/css/: material.cyan-light_blue.min.css  styles.css
templates/: index.html
